--- a/css/your-styles-here.css
+++ b/css/your-styles-here.css
@@ -1,3 +1,31 @@
 @charset "utf-8";
 /* CSS Document */
 
+nav ul {
+    list-style: none;
+    padding: 0;
+    margin-top: 10px;
+    display: flex;
+    gap: 15px;
+}
+
+nav a {
+    display: inline-block;
+    padding: 5px 8px;
+    text-decoration: none;
+    color: black;
+    font-weight: bold;
+    transition: color 0.3s ease, background-color 0.3s ease;
+    border-radius: 12px;
+}
+
+nav a:hover,
+nav a:focus {
+    color: white;
+    background-color: black;
+    border-radius: 12px;
+}
+
+[hidden]{
+    display: none;
+}
